--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -11,15 +11,9 @@
     >
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
-    <c-header-nav class="d-none d-md-flex" *ngIf="false">
+    <c-header-nav class="d-none d-md-flex">
       <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>
+        <a cNavLink routerLink="/rooms" routerLinkActive="active">Minihouse Huỳnh Lộc</a>
       </c-nav-item>
     </c-header-nav>
 
