--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -1,18 +1,14 @@
 <!-- Nút thêm phòng mới -->
-<button class="btn btn-primary btnAddNewRow" color="primary" (click)="addNewRow()">Thêm Khách Thuê Mới</button>
-<button class="btn btn-danger btnAddNewRow" color="primary" *ngIf="hasSelectedRows" (click)="deleteSelectedRows()">Xóa Hàng Đã Chọn</button>
+<button class="btn btn-primary btnAddNewRow" disabled style="cursor: not-allowed;" color="primary" (click)="addNewRow()">Thêm Nhân Viên</button>
 <button class="btn btn-warning btnSaveChange" (click)="saveChanges()">Lưu Thay Đổi</button>
 <ag-grid-angular
   style="width: 100%; height: 500px"
   class="ag-theme-quartz"
   [rowData]="rowData"
   [columnDefs]="colDefs"
-  [defaultColDef]="defaultColDef"
-  [rowSelection]="rowSelection"
   [pagination]="pagination"
   [paginationPageSize]="paginationPageSize"
   [rowHeight]="50"
-  (selectionChanged)="onSelectionChanged()"
   [paginationPageSizeSelector]="paginationPageSizeSelector"
   (gridReady)="onGridReady($event)"
 >
