--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -1,13 +1,4 @@
-.ag-theme-quartz {
-    /* Changes the color of the grid text */
-      --ag-foreground-color: rgb(14, 68, 145);
-      /* Changes the color of the grid background */
-      --ag-background-color: rgb(241, 247, 255);
-      /* Changes the header color of the top row */
-      --ag-header-background-color: rgb(228, 237, 250);
-      /* Changes the hover color of the row*/
-      --ag-row-hover-color: rgb(216, 226, 255);
-}
+
 .rag-green {
   background-color: #33cc3344;
 }
@@ -21,6 +12,5 @@
   margin-right: 5px;
 }
 .btnSaveChange{
-  position: absolute;
-  right: 20px;
+  float: right;
 }
